--- a/package.json
+++ b/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^4.6.0",
+    "bootstrap-social": "5.1.1",
+    "font-awesome": "4.7.0",
+    "popper.js": "^1.16.1",
+    "prop-types": "15.6.0",
     "react": "^18.2.0",
+    "react-animation-components": "3.0.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
+    "react-redux-form": "1.16.8",
+    "react-router-dom": "4.2.2",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.0",
+    "redux": "3.7.2",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
